Ensure text remains visible during webfont load

--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,17 @@ html {
 @font-face {
   font-family: 'futura-bold';
   src: local('futura-bold'), url(./fonts/futura-bold.ttf) format('truetype');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'futura-book';
   src: local('Futura-Book-BT'), url(./fonts/Futura-Book-BT.woff) format('woff');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'futura-medium';
   src: local('futura-medium'), url(./fonts/futura-medium.woff) format('woff');
+  font-display: swap;
 }
